--- a/ea-template/src/main/resources/database-mysql.properties
+++ b/ea-template/src/main/resources/database-mysql.properties
@@ -1,5 +1,5 @@
 #ea.jdbc.url=jdbc:h2:~/test
-ea.jdbc.url=jdbc:mysql://localhost:3306/wte
+ea.jdbc.url=jdbc:mysql://localhost:3306/apmtest
 #jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=com.mysql.jdbc.Driver
 #org.h2.Driver
