--- a/ea-template/src/main/resources/database-${db}.properties
+++ b/ea-template/src/main/resources/database-${db}.properties
@@ -1,4 +1,5 @@
-ea.jdbc.url=jdbc:h2:~/demo
+ea.jdbc.url=jdbc:h2:tcp://localhost/~/demo
+#jdbc:h2:~/demo
 #ea.jdbc.url=jdbc:mysql://localhost:3306/demo
 #jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=org.h2.Driver
@@ -9,7 +10,7 @@ ea.jdbc.password=
 ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
-ea.hibernate.hbm2ddl=create
+ea.hibernate.hbm2ddl=update
 ea.hibernate.show_sql=true
 ea.hibernate.jdbc.fetch_size=50
 ea.hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
