--- a/ea-core/src/main/resources/database-h2.properties
+++ b/ea-core/src/main/resources/database-h2.properties
@@ -1,5 +1,5 @@
-ea.jdbc.url=jdbc:h2:~/demo
-#ea.jdbc.url=jdbc:h2:tcp://localhost/~/apm3
+ea.jdbc.url=jdbc:h2:~/ea-core
+#ea.jdbc.url=jdbc:h2:tcp://localhost/~/ea-core
 ea.jdbc.driver=org.h2.Driver
 ea.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ea.jdbc.username=sa
@@ -15,16 +15,6 @@ ea.hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 ea.hibernate.cache.use_query_cache=true
 ea.hibernate.cache.use_second_level_cache=true
 
-business.jdbc.url=jdbc:h2:tcp://113.105.13.195:6666	/~/apm
-business.jdbc.driver=org.h2.Driver
-business.hibernate.dialect=org.hibernate.dialect.H2Dialect
-business.jdbc.username=sa
-business.jdbc.password=
-business.jdbc.maxIdle=30
-business.jdbc.maxActive=50
-business.jdbc.maxWait=60000
-business.hibernate.hbm2ddl=update
-business.hibernate.show_sql=true
 
 
 # alter  table manager_ea_user alter  column  allrole varchar(800);
