--- a/ea-template/pom.xml
+++ b/ea-template/pom.xml
@@ -9,13 +9,13 @@
   </parent>
 	<groupId>ea</groupId>
 	<artifactId>ea-template</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	 
 	 
 	<build>
 	  	 <plugins>
-					 <plugin>
+				<plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>8.0.0.M2</version>
@@ -33,6 +33,77 @@
                     </webAppConfig>
                 </configuration>
             </plugin>
+            
+			<plugin>
+				<groupId>com.agilejava.docbkx</groupId>
+				<artifactId>docbkx-maven-plugin</artifactId>
+				<version>2.0.15</version>
+				<dependencies>
+     	 		 	<dependency>
+						<groupId>org.docbook</groupId>
+						<artifactId>docbook-xml</artifactId>
+						<version>4.4</version>
+						<scope>runtime</scope>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.xslthl</groupId>
+						<artifactId>xslthl</artifactId>
+						<version>2.0.1</version>
+						<scope>runtime</scope>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.offo</groupId>
+						<artifactId>fop-hyph</artifactId>
+						<version>1.2</version>
+						<scope>runtime</scope>
+					</dependency>
+				</dependencies>
+				<executions>
+				<execution>
+						<id>generate-html</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>generate-html</goal>
+						</goals>
+						<configuration>
+							<includes>index.xml</includes><!--handbook.xml **/*.dbx,**/*.xml-->
+							<targetDirectory>${basedir}/target/docs/html</targetDirectory>
+							<chunkedOutput>false</chunkedOutput>
+							<useExtensions>1</useExtensions>
+							<highlightSource>1</highlightSource>
+							<htmlStylesheet>css/style1.css</htmlStylesheet>
+							<l10nGentextDefaultLanguage>en</l10nGentextDefaultLanguage>
+							<l10nGentextLanguage>zh</l10nGentextLanguage>							
+							<postProcess>
+								<copy todir="${basedir}/target/docs/html/css">
+									<fileset dir="docbook/css" includes="**/*" />
+								</copy>			
+								<copy todir="${basedir}/target/docs/html/picture">
+									<fileset dir="docbook/picture" includes="**/*" />
+								</copy>	
+							</postProcess>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+         <entities>
+            <entity><name>version</name><value>${project.version}</value></entity>
+         </entities>
+					<sourceDirectory>${basedir}/docbook</sourceDirectory>
+					<xincludeSupported>true</xincludeSupported>			
+				  <generateToc>
+					      book toc,title,figure,table,example,equation
+                          appendix  toc,title,figure,table,example,equation		
+        	</generateToc>
+					<tocMaxDepth>8</tocMaxDepth>
+					<tocSectionDepth>8</tocSectionDepth>
+					<generateSectionTocLevel>8</generateSectionTocLevel>
+					<chapterAutolabel>false</chapterAutolabel>
+					<sectionAutolabelMaxDepth>8</sectionAutolabelMaxDepth>
+					<sectionLabelIncludesComponentLabel>false</sectionLabelIncludesComponentLabel>
+					<tableFootnoteNumberFormat>1</tableFootnoteNumberFormat>
+				</configuration>
+			</plugin>
          </plugins>
   </build>            
             
