--- a/ea-template/src/main/resources/database-h2.properties
+++ b/ea-template/src/main/resources/database-h2.properties
@@ -1,4 +1,5 @@
-ea.jdbc.url=jdbc:h2:tcp://localhost/~/demo
+ea.jdbc.url=jdbc:h2:~/demo
+#ea.jdbc.url=jdbc:h2:tcp://localhost/~/demo
 #ea.jdbc.url=jdbc:h2:tcp://localhost/~/wte
 ea.jdbc.driver=org.h2.Driver
 ea.hibernate.dialect=org.hibernate.dialect.H2Dialect
